cpp/src/arrow/util/bit_util.h
@@ -18,8 +18,11 @@
 #pragma once
 
 #if defined(_MSC_VER)
+#if defined(_M_AMD64) || defined(_M_X64)
 #include <intrin.h>  // IWYU pragma: keep
 #include <nmmintrin.h>
+#endif
+
 #pragma intrinsic(_BitScanReverse)
 #pragma intrinsic(_BitScanForward)
 #define ARROW_POPCOUNT64 __popcnt64
